@@ -1,3 +1,9 @@
+2002-08-14  Johan Dahlin  <jdahlin@telia.com>
+
+	Patch from Christian Reis <kiko@async.com.br>, fixes bug 88845:
+	* gtk.py: Add pos argument to Editable.insert_text
+        * gtkmodule.c: Dito
+
 2002-04-08  Matt Wilson  <msw@redhat.com>
 
 	* gdkpixbufmodule.c (pygdk_pixbuf_scale, pygdk_pixbuf_composite)
